fixed overflow

--- a/src/app.css
+++ b/src/app.css
@@ -77,6 +77,7 @@
     font-weight: 400;
     font-style: normal;
     font-family: 'Anonymous Pro';
+    box-sizing: border-box;
 }
 
 ::-webkit-scrollbar {
